# SpaceInvadersLab

./: .gitignore  CMakeLists.txt  Game  README.md  a.out
inc/: errors.hpp  game.hpp  objects.hpp
src/: a.out  game.cpp  main.cpp  objects.cpp
